# vimaker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: windows-build.yml
packaging/: README.md  build_windows.ps1  vimaker.iss  vimaker.spec
scripts/: gen_sample.py
src/vimaker/: __init__.py  __main__.py  config.py  ffmpeg.py  gui_main.py  job.py  keyframes.py  metadata.py  models.py  motion.py  ollama_boot.py  prefs.py  preview.py  scenes.py  select.py
src/vimaker/gui/: app.py  theme.py  worker.py
src/vimaker/gui/assets/: icon.icns
