[project]
name = "vimaker"
version = "0.1.0"
description = "Видео -> превью-нарезка + двуязычные описание и хэштеги (локально, через Ollama)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scenedetect[opencv-headless]>=0.6.4",
    "static-ffmpeg>=2.7",
    "numpy>=1.26",
    "pillow>=10.3",
    "pyside6>=6.7",
]

[project.scripts]
vimaker = "vimaker.__main__:app"
vimaker-gui = "vimaker.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vimaker"]
artifacts = ["src/vimaker/gui/assets/*.png", "src/vimaker/gui/assets/*.icns"]
